Scheduling tool added

--- a/education/academics/doctype/student_applicant/student_applicant.json
+++ b/education/academics/doctype/student_applicant/student_applicant.json
@@ -1,6 +1,6 @@
 {
  "allow_copy": 0, 
- "allow_import": 0, 
+ "allow_import": 1, 
  "allow_rename": 0, 
  "autoname": "AP.######", 
  "creation": "2015-09-11 11:50:09.740807", 
@@ -175,7 +175,7 @@
    "in_list_view": 0, 
    "label": "Status", 
    "no_copy": 0, 
-   "options": "Applied\nSelected", 
+   "options": "Applied\nSelected\nStudent", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -329,7 +329,7 @@
  "is_submittable": 0, 
  "issingle": 0, 
  "istable": 0, 
- "modified": "2015-09-17 14:16:53.021004", 
+ "modified": "2015-09-22 16:20:45.659909", 
  "modified_by": "Administrator", 
  "module": "Academics", 
  "name": "Student Applicant", 
