--- a/education/academics/doctype/student_applicant/student_applicant.json
+++ b/education/academics/doctype/student_applicant/student_applicant.json
@@ -310,7 +310,7 @@
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "in_filter": 0, 
-   "in_list_view": 0, 
+   "in_list_view": 1, 
    "label": "Program", 
    "no_copy": 0, 
    "options": "Program", 
@@ -334,7 +334,7 @@
    "ignore_user_permissions": 0, 
    "in_filter": 0, 
    "in_list_view": 0, 
-   "label": "title", 
+   "label": "Title", 
    "no_copy": 0, 
    "permlevel": 0, 
    "precision": "", 
@@ -376,7 +376,7 @@
  "is_submittable": 1, 
  "issingle": 0, 
  "istable": 0, 
- "modified": "2015-10-20 15:28:23.449582", 
+ "modified": "2015-11-02 12:57:46.130244", 
  "modified_by": "Administrator", 
  "module": "Academics", 
  "name": "Student Applicant", 
