--- a/education/academics/doctype/student_applicant/student_applicant.json
+++ b/education/academics/doctype/student_applicant/student_applicant.json
@@ -170,13 +170,15 @@
   {
    "allow_on_submit": 0, 
    "bold": 0, 
-   "collapsible": 0, 
+   "collapsible": 1, 
+   "collapsible_depends_on": "!doc.__islocal", 
    "fieldname": "section_break_4", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "in_filter": 0, 
    "in_list_view": 0, 
+   "label": "Personel Details", 
    "no_copy": 0, 
    "permlevel": 0, 
    "precision": "", 
@@ -418,7 +420,7 @@
  "is_submittable": 1, 
  "issingle": 0, 
  "istable": 0, 
- "modified": "2015-11-04 15:38:57.391476", 
+ "modified": "2015-11-13 10:30:44.590735", 
  "modified_by": "Administrator", 
  "module": "Academics", 
  "name": "Student Applicant", 
