--- a/education/academics/doctype/student_applicant/student_applicant.json
+++ b/education/academics/doctype/student_applicant/student_applicant.json
@@ -420,13 +420,33 @@
  "is_submittable": 1, 
  "issingle": 0, 
  "istable": 0, 
- "modified": "2015-11-13 10:30:44.590735", 
+ "modified": "2015-11-17 13:01:55.001959", 
  "modified_by": "Administrator", 
  "module": "Academics", 
  "name": "Student Applicant", 
  "name_case": "", 
  "owner": "Administrator", 
  "permissions": [
+  {
+   "amend": 1, 
+   "apply_user_permissions": 0, 
+   "cancel": 1, 
+   "create": 1, 
+   "delete": 1, 
+   "email": 1, 
+   "export": 1, 
+   "if_owner": 0, 
+   "import": 1, 
+   "permlevel": 0, 
+   "print": 1, 
+   "read": 1, 
+   "report": 1, 
+   "role": "Academics User", 
+   "set_user_permissions": 0, 
+   "share": 1, 
+   "submit": 1, 
+   "write": 1
+  }, 
   {
    "amend": 1, 
    "apply_user_permissions": 0, 
