--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
 install:
   - sudo apt-get purge -y mysql-common
   - wget https://raw.githubusercontent.com/frappe/bench/master/install_scripts/setup_frappe.sh
-  - sudo bash setup_frappe.sh --skip-setup-bench --mysql-root-password travis
+  - sudo bash setup_frappe.sh --skip-setup-bench --mysql-root-password travis --bench-branch develop
   - sudo pip install --upgrade pip
   - rm $TRAVIS_BUILD_DIR/.git/shallow
   - sudo service redis-server start
@@ -19,7 +19,7 @@ install:
 
 script:
   - cd ~/frappe-bench
-  - bench get-app erpnext https://github.com/frappe/erpnext.git
+  - bench get-app erpnext https://github.com/frappe/erpnext.git --erpnext-branch master
   - bench get-app schools $TRAVIS_BUILD_DIR
   - bench use test_site
   - bench reinstall
