Added fee and examination records in demo script

--- a/schools/academics/doctype/student_applicant/student_applicant.json
+++ b/schools/academics/doctype/student_applicant/student_applicant.json
@@ -3,6 +3,7 @@
  "allow_import": 1, 
  "allow_rename": 0, 
  "autoname": "AP.######", 
+ "beta": 0, 
  "creation": "2015-09-11 11:50:09.740807", 
  "custom": 0, 
  "docstatus": 0, 
@@ -576,7 +577,7 @@
  "istable": 0, 
  "max_attachments": 0, 
  "menu_index": 0, 
- "modified": "2016-04-18 16:27:57.056896", 
+ "modified": "2016-06-02 06:57:11.240151", 
  "modified_by": "Administrator", 
  "module": "Academics", 
  "name": "Student Applicant", 
