--- a/schools/academics/doctype/student_applicant/student_applicant.json
+++ b/schools/academics/doctype/student_applicant/student_applicant.json
@@ -220,6 +220,8 @@
    "collapsible": 0, 
    "fieldname": "academic_year", 
    "fieldtype": "Link", 
+   "fieldname": "column_break_9", 
+   "fieldtype": "Column Break", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
